execution-service/k8s/k8s-execution-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: execution-service
  name: execution-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: execution-service
  template:
    metadata:
      labels:
        app: execution-service
    spec:
      containers:
        - image: us.gcr.io/classroomict/execution-service:1.1.0
          imagePullPolicy: IfNotPresent
          name: execution-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/info
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
