execution-service/k8s/k8s-execution-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: execution-service
    type: microservice
    tier: backend
  name: execution-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: execution-service
  type: NodePort
